--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"tailwindcss": "^1.1.2",
 		"tailwindcss-plugin-fancy": "0.0.11",
 		"webpack": "^4.40.2",
-		"webpack-cli": "^3.3.9"
+		"webpack-cli": "^3.3.9",
+		"lodash": ">=4.17.13"
 	},
 	"dependencies": {
 		"acorn": "^7.1.0"
