--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "An 11ty starter with TailwindCSS, PostCSS, PurgeCSS and other modern tools",
 	"main": "index.js",
 	"scripts": {
-		"clean": "rm -rf dist",
+		"clean": "rimraf dist",
 		"eleventy:default": "eleventy",
 		"eleventy:watch": "eleventy --watch",
 		"styles:prod": "postcss src/styles/tailwind.css --output ./dist/styles/app.css",
@@ -26,15 +26,16 @@
 		"babel-loader": "^8.0.6",
 		"cross-env": "^6.0.0",
 		"light-server": "^2.6.4",
+		"lodash": ">=4.17.13",
 		"npm-run-all": "^4.1.5",
 		"postcss-cli": "^6.1.3",
 		"postcss-import": "^12.0.1",
 		"postcss-preset-env": "^6.7.0",
+		"rimraf": "^3.0.0",
 		"tailwindcss": "^1.1.2",
 		"tailwindcss-plugin-fancy": "0.0.11",
 		"webpack": "^4.40.2",
-		"webpack-cli": "^3.3.9",
-		"lodash": ">=4.17.13"
+		"webpack-cli": "^3.3.9"
 	},
 	"dependencies": {
 		"acorn": "^7.1.0"
